# albums_weekly

./: .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.md
backend/: Dockerfile  pyproject.toml
backend/api/: image_generator.py  models.py  schemas.py  telegram.py  tests.py  utils.py
backend/api/controllers/: albums.py  auth.py  podcasts.py  posts.py  texts.py
backend/api/migrations/: 0001_initial.py  0002_album_index.py  0003_post_substack_content_post_telegram_content_and_more.py  0004_alter_text_content.py  0005_albumviewcount_postviewcount.py  0006_alter_album_pub_date_alter_podcast_pub_date_and_more.py  0007_alter_album_album_name_alter_album_band_name_and_more.py  0008_alter_album_text.py
backend/api/tests/: base.py  tests_albums.py  tests_posts.py
backend/backend/: api.py  settings.py  urls.py
backend/fixtures/: albums_album.json  albums_album_all.json  albums_archive.json  albums_podcast.json  albums_post.json  albums_post_all.json  albums_text.json  parser.py  posts_archive.json  reviews.json
backend/front/: tests.py  urls.py  utils.py  views.py
backend/front/templatetags/: custom_filters.py
backend/logs/: django.log.2024-10-26  django.log.2024-10-28  django.log.2024-10-30  django.log.2024-11-02  django.log.2024-11-05  django.log.2024-11-06  django.log.2024-11-07
backend/releases/: classes.py  parser.py
backend/templates/: base.html
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  api.ts  interface.ts  main.tsx
nginx/: Dockerfile  nginx.conf
(+38 files in other folders)
